[project]
name = "CSE472-Project1"
version = "0.1.0"
description = "Repository for Project 1 of CSE472: Social Media Mining (Fall 2025)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mastodon-py>=2.1.3",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
[tool.ruff]
select = ["I"]  # Enable import sorting rules
fix = true      # Allow automatic fixes
